fix: update gap above title-color to 0.5rem

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -89,11 +89,11 @@ div.reusable-content {
   margin-bottom: 1rem;
 
   &> p.title-color {
-    padding-top: 10px;
+    padding-top: 0.5rem;
   }
 
   &> p.content {
-    padding-top: 8px;
+    padding-top: 0.5rem;
   }
 }
 
